--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,108 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.2
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+binaryornot==0.4.4
+bleach==5.0.1
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.0
+click==8.1.3
+cookiecutter==2.1.1
+db-dtypes==1.0.2
+debugpy==1.6.2
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+executing==0.9.0
+fastjsonschema==2.16.1
+google-api-core==2.8.2
+google-auth==2.9.1
+google-auth-oauthlib==0.5.2
+google-cloud-bigquery==3.2.0
+google-cloud-bigquery-storage==2.14.1
+google-cloud-core==2.3.2
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+grpcio==1.47.0
+grpcio-status==1.47.0
+idna==3.3
+ipykernel==6.15.1
+ipython==8.4.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.1
+jedi==0.18.1
+Jinja2==3.1.2
+jinja2-time==0.2.0
+joblib==1.1.0
+jsonschema==4.7.2
+jupyter==1.0.0
+jupyter-client==7.3.4
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.6.6
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+numpy==1.23.1
+oauthlib==3.2.0
+packaging==21.3
+pandas==1.4.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
+proto-plus==1.20.6
+protobuf==3.20.1
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==8.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+Pygments==2.12.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-slugify==6.1.2
+pytz==2022.1
+PyYAML==6.0
+pyzmq==23.2.0
+qtconsole==5.3.1
+QtPy==2.1.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.1.1
+scipy==1.8.1
+Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0
+soupsieve==2.3.2.post1
+stack-data==0.3.0
+terminado==0.15.0
+text-unidecode==1.3
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+tornado==6.2
+traitlets==5.3.0
+urllib3==1.26.11
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.6.1
